[gd_scene load_steps=25 format=3 uid="uid://cp230rwt64c2n"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_wp4g5"]
[ext_resource type="Texture2D" uid="uid://kscgwh6fjjm0" path="res://ideas/assets/logo.png" id="2_aluce"]
[ext_resource type="Texture2D" uid="uid://bgydtidxq1hii" path="res://ideas/assets/buttons/4x/Asset 6@4x.png" id="3_bak26"]
[ext_resource type="Texture2D" uid="uid://cwmc0mp346k2n" path="res://ideas/assets/buttons/4x/Asset 12@4x.png" id="4_x8enm"]
[ext_resource type="Texture2D" uid="uid://btia1q1jl7ui" path="res://ideas/assets/buttons/4x/Asset 24@4x.png" id="5_51sw0"]
[ext_resource type="Theme" uid="uid://c3n7aiaxcqhoo" path="res://themes/theme.tres" id="6_3m6x0"]
[ext_resource type="Gradient" uid="uid://spqtv68kdlkx" path="res://themes/gradient.tres" id="7_jm048"]
[ext_resource type="Texture2D" uid="uid://caoymo6b4pxhl" path="res://ideas/assets/buttons/4x/Asset 26@4x.png" id="8_covac"]
[ext_resource type="Texture2D" uid="uid://c4eej1nx372fe" path="res://ideas/assets/frog_green.png" id="9_8uv82"]
[ext_resource type="Texture2D" uid="uid://cvqfhyi31fdx6" path="res://ideas/assets/frog_red.png" id="10_kae8m"]
[ext_resource type="PackedScene" uid="uid://215fycacuk5o" path="res://scenes/playfield.tscn" id="11_5abmp"]
[ext_resource type="Script" path="res://scripts/playfield.gd" id="12_m65xv"]
[ext_resource type="AudioStream" uid="uid://cyw5f8mfxftmn" path="res://ideas/assets/audio/jump.mp3" id="14_kowql"]
[ext_resource type="AudioStream" uid="uid://bbliconnul4in" path="res://ideas/assets/audio/win.mp3" id="14_kujnr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kuvsq"]
texture = ExtResource("3_bak26")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gfxrr"]
texture = ExtResource("3_bak26")
modulate_color = Color(1, 1, 1, 0.756863)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xksdq"]
texture = ExtResource("3_bak26")
modulate_color = Color(1, 1, 1, 0.756863)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7t47x"]
texture = ExtResource("3_bak26")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ea1sm"]
texture = ExtResource("4_x8enm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fxw67"]
texture = ExtResource("4_x8enm")
modulate_color = Color(1, 1, 1, 0.756863)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s2ybn"]
texture = ExtResource("4_x8enm")
modulate_color = Color(1, 1, 1, 0.756863)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_033ou"]
texture = ExtResource("4_x8enm")
modulate_color = Color(1, 1, 1, 0.439216)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7va1i"]
gradient = ExtResource("7_jm048")

[sub_resource type="GradientTexture1D" id="GradientTexture1D_d71m5"]
gradient = ExtResource("7_jm048")

[node name="Level" type="Node2D"]
script = ExtResource("1_wp4g5")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="UI/CanvasLayer"]

[node name="Background" type="TextureRect" parent="UI/CanvasLayer/ParallaxBackground"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
stretch_mode = 6

[node name="Logo" type="TextureRect" parent="UI/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 8.0
offset_right = -59.0
offset_bottom = 199.0
grow_horizontal = 0
texture = ExtResource("2_aluce")
expand_mode = 2

[node name="MenuButton" type="Button" parent="UI/CanvasLayer"]
offset_left = 56.0
offset_top = 40.0
offset_right = 184.0
offset_bottom = 167.0
theme_override_styles/normal = SubResource("StyleBoxTexture_kuvsq")
theme_override_styles/hover = SubResource("StyleBoxTexture_gfxrr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xksdq")
theme_override_styles/focus = SubResource("StyleBoxTexture_7t47x")

[node name="MuteButton" type="Button" parent="UI/CanvasLayer"]
unique_name_in_owner = true
offset_left = 208.0
offset_top = 40.0
offset_right = 336.0
offset_bottom = 167.0
theme_override_styles/normal = SubResource("StyleBoxTexture_ea1sm")
theme_override_styles/hover = SubResource("StyleBoxTexture_fxw67")
theme_override_styles/pressed = SubResource("StyleBoxTexture_s2ybn")
theme_override_styles/focus = SubResource("StyleBoxTexture_033ou")

[node name="LevelContainerTexture" type="TextureRect" parent="UI/CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = 24.0
offset_right = 128.0
offset_bottom = 96.0
grow_horizontal = 2
texture = SubResource("GradientTexture1D_7va1i")

[node name="LevelContainer" type="HBoxContainer" parent="UI/CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.5
offset_top = 30.0
offset_right = 96.5
offset_bottom = 58.0
grow_horizontal = 2
theme_override_constants/separation = 32

[node name="LevelLabel" type="Label" parent="UI/CanvasLayer/LevelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_3m6x0")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 50
text = "Level: 1"
horizontal_alignment = 1

[node name="LevelSolved" type="TextureRect" parent="UI/CanvasLayer/LevelContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_covac")
expand_mode = 2

[node name="Difficulty" type="Control" parent="UI/CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 424.0
offset_top = 236.0
offset_right = 464.0
offset_bottom = 276.0

[node name="DifficultyDisplayBackground" type="TextureRect" parent="UI/CanvasLayer/Difficulty"]
layout_mode = 0
offset_right = 175.0
offset_bottom = 370.0
rotation = 1.5708
texture = SubResource("GradientTexture1D_d71m5")
expand_mode = 1

[node name="DifficultyLabel" type="Label" parent="UI/CanvasLayer/Difficulty"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -352.0
offset_top = 100.0
offset_right = 42.0
offset_bottom = 170.0
theme = ExtResource("6_3m6x0")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 50
text = "Difficulty: Tadpole"

[node name="DifficultyProgressBar" type="TextureRect" parent="UI/CanvasLayer/Difficulty"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -360.0
offset_top = 20.0
offset_right = -16.0
offset_bottom = 81.0
expand_mode = 2

[node name="Rules" type="Control" parent="UI/CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -328.0
offset_top = 264.0
offset_right = -67.0
offset_bottom = 592.28
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="UI/CanvasLayer/Rules"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 261.0
offset_top = -2.0
offset_right = 470.0
offset_bottom = -69.28
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
texture = SubResource("GradientTexture1D_d71m5")
expand_mode = 1

[node name="RulesLabel" type="Label" parent="UI/CanvasLayer/Rules"]
layout_mode = 2
offset_left = 14.6
offset_top = -0.159973
offset_right = 254.6
offset_bottom = 69.84
theme = ExtResource("6_3m6x0")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 6
text = "Rules:"

[node name="RulesText" type="Label" parent="UI/CanvasLayer/Rules"]
layout_mode = 2
offset_left = 14.6
offset_top = 85.84
offset_right = 261.6
offset_bottom = 411.84
theme = ExtResource("6_3m6x0")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 38
text = "1. Only            should remain in the pond
2. Jump over           with           or
3. No moves without jumping over      allowed"
autowrap_mode = 2

[node name="FrogGreen" type="Sprite2D" parent="UI/CanvasLayer/Rules"]
position = Vector2(192, 200)
scale = Vector2(0.13625, 0.13625)
texture = ExtResource("9_8uv82")

[node name="FrogRed" type="Sprite2D" parent="UI/CanvasLayer/Rules"]
position = Vector2(125, 104)
scale = Vector2(0.13625, 0.13625)
texture = ExtResource("10_kae8m")

[node name="FrogRed2" type="Sprite2D" parent="UI/CanvasLayer/Rules"]
position = Vector2(192, 248)
scale = Vector2(0.13625, 0.13625)
texture = ExtResource("10_kae8m")

[node name="FrogGreen2" type="Sprite2D" parent="UI/CanvasLayer/Rules"]
position = Vector2(96.0001, 248)
scale = Vector2(0.13625, 0.13625)
texture = ExtResource("9_8uv82")

[node name="FrogGreen3" type="Sprite2D" parent="UI/CanvasLayer/Rules"]
position = Vector2(200, 344)
scale = Vector2(0.13625, 0.13625)
texture = ExtResource("9_8uv82")

[node name="EditLevelButton" type="Button" parent="UI/CanvasLayer"]
unique_name_in_owner = true
offset_left = 56.0
offset_top = 800.0
offset_right = 317.88
offset_bottom = 862.0
theme = ExtResource("6_3m6x0")
text = "Edit level"

[node name="PreviousLevelButton" type="Button" parent="UI/CanvasLayer"]
unique_name_in_owner = true
offset_left = 56.0
offset_top = 896.0
offset_right = 317.88
offset_bottom = 958.0
theme = ExtResource("6_3m6x0")
text = "Previous level"

[node name="RestartLevelButton" type="Button" parent="UI/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -328.0
offset_top = 800.0
offset_right = -66.1201
offset_bottom = 862.0
grow_horizontal = 0
theme = ExtResource("6_3m6x0")
text = "Restart level"

[node name="NextLevelContainer" type="VBoxContainer" parent="UI/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -328.0
offset_top = 896.0
offset_right = -72.0
offset_bottom = 1011.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="NextLevelButton" type="Button" parent="UI/CanvasLayer/NextLevelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_3m6x0")
text = "Next level"

[node name="FinishWarning" type="Label" parent="UI/CanvasLayer/NextLevelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_3m6x0")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Finish the level to proceed"
horizontal_alignment = 1

[node name="Win" type="Control" parent="UI/CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -296.0
offset_top = 216.0
offset_right = 296.0
offset_bottom = 384.0
grow_horizontal = 2

[node name="WinTexture" type="TextureRect" parent="UI/CanvasLayer/Win"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_51sw0")

[node name="WinLabel" type="Label" parent="UI/CanvasLayer/Win"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.447
anchor_right = 0.5
anchor_bottom = 0.452
offset_left = -176.5
offset_top = -57.5
offset_right = 176.5
offset_bottom = 57.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_3m6x0")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 100
text = "Level solved!"
horizontal_alignment = 1

[node name="GameCompleteLabel" type="Label" parent="UI/CanvasLayer/Win"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -592.0
offset_top = 312.0
offset_right = 631.0
offset_bottom = 545.0
grow_horizontal = 2
theme = ExtResource("6_3m6x0")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 100
text = "You've completed all levels!
Congratulations, you're the frog emperor!"
horizontal_alignment = 1

[node name="Playfield" parent="." instance=ExtResource("11_5abmp")]
script = ExtResource("12_m65xv")

[node name="PlayfieldBackground" parent="Playfield" index="0"]
anchors_preset = -1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
metadata/_edit_use_anchors_ = true

[node name="WinPlayer" type="AudioStreamPlayer" parent="." groups=["AudioStreamPlayers"]]
stream = ExtResource("14_kujnr")
volume_db = -80.0

[node name="JumpPlayer" type="AudioStreamPlayer" parent="." groups=["AudioStreamPlayers"]]
stream = ExtResource("14_kowql")
volume_db = -80.0

[connection signal="pressed" from="UI/CanvasLayer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/MuteButton" to="." method="_on_mute_button_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/EditLevelButton" to="." method="_on_edit_level_button_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/PreviousLevelButton" to="." method="_on_previous_level_button_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/RestartLevelButton" to="." method="_on_restart_level_button_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/NextLevelContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="jump" from="Playfield" to="." method="_on_playfield_jump"]
[connection signal="solved" from="Playfield" to="." method="_on_playfield_solved"]

[editable path="Playfield"]
